--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="automapper" Version="4.1.0" />
+    <PackageReference Include="bootbox" Version="4.3.0" />
     <PackageReference Include="bootstrap" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
